Add images to HTML

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
   <div class="process">
     <h2>Our Process</h2>
     <h3>Identify</h3>
+    <img src="./resources/images/identify.svg"></img>
     <p>We focus on the most important details.</p>
     <h3>Understand</h3>
+    <img src="./resources/images/understand.svg"></img>
     <p>We study our projects inside and out</p>
     <h3>Execute</h3>
+    <img src="./resources/images/execute.svg"></img>
     <p>We put everything we have into our work.</p>
   </div>
 
