--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <div class="header">
     <h1>Broadway Design</h1>
-    <p>Home</p>
-    <p>Process</p>
-    <p>Work</p>
-    <p>Team</p>
-    <p>Contact</p>
+    <h4>Home</h4>
+    <h4>Process</h4>
+    <h4>Work</h4>
+    <h4>Team</h4>
+    <h4>Contact</h4>
   </div>
 
   <div class="process">
